Fixed pathname of CLOZUK/supp-table-4.csv in genome.py

--- a/presentations/bsm-ms/bsm-ms.tex
+++ b/presentations/bsm-ms/bsm-ms.tex
@@ -147,9 +147,10 @@ of the pipeline.
 \subsection*{Enrichment analysis}
 
 In the preceding section we showed that the genome-wide rate of somatic SNVs
-in the DLPFC is unaltered in schizophrenia.   We sought to test enrichment
-in several genomic elements or gene sets (see Table below).  To that end we
-established statistical procedures.
+in the DLPFC is unaltered in schizophrenia.  It is, however, possible 
+that the rate is significantly altered at certain genomic regions.
+We selected genomic elements and gene sets for testing altered somatic SNV
+rate (Table~\ref{tab:modsel}).
 
 \begin{table}
 \begin{tabular}{lrlr}
@@ -216,6 +217,14 @@ schizophrenic individuals relative to controls.  Our present study extends
 this basic result to somatic SNVs in the human brain.  In particular, we
 present evidence that genes implicated in schizophrenia by schizophrenia GWAS and other psychiatric
 GWAS suffer increased rate of somatic point mutations in schizophrenia.
+
+Increased rate suggests that these somatic SNVs are damaging to normal brain
+function.  On the other hand we did not observe decreased rate at other
+genomic regions, which would allude to compensatory, protective mutations in
+schizophrenia.  This observation parallels those regarding rare germline and
+de-novo single nucleotide mutations.  Even so, we cannot rule out that
+protective somatic SNVs exist in genomic regions mechanistically involved in
+schizophrenia so long they are outnumbered by damaging mutations.
 
 Questions we cannot answer:
 
