made most of devel bio seminar

--- a/presentations/2020-12-06-cdrb-wip/2020-12-06-cdrb-wip.tex
+++ b/presentations/2020-12-06-cdrb-wip/2020-12-06-cdrb-wip.tex
@@ -543,7 +543,8 @@ discover
 \parbox[c]{9em}{\includegraphics[width=0.3\textwidth]{/home/attila/projects/bsm/resources/logos/nimh-logo.png}}
 & David Obenshain \\
 \noalign{\medskip}
-\parbox[c]{9em}{\includegraphics[width=0.3\textwidth]{/home/attila/projects/bsm/resources/logos/BSMN-NameAndTagline-Horizontal.png}}
+\parbox[c]{9em}{\includegraphics[width=0.3\textwidth]{/home/attila/projects/bsm/resources/logos/nda.svg}}
+%\parbox[c]{9em}{\includegraphics[width=0.3\textwidth]{/home/attila/projects/bsm/resources/logos/BSMN-NameAndTagline-Horizontal.png}}
 & \\
 \end{tabular}
 \end{frame}
