relative SNV rates for scz gwas genes & loci; enhancer and genic enhancer

--- a/notebook/2021-01-26-indiv-counts-modeling/2021-01-26-indiv-counts-modeling.ipynb
+++ b/notebook/2021-01-26-indiv-counts-modeling/2021-01-26-indiv-counts-modeling.ipynb
@@ -154,7 +154,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the we query the annotated callset with a set of queries for annotations from `near_gens_Annotation` to `near_gens_Overlapped`.  This creates detailed `results` as well as a `summary` showing the number of calls in each category for each Dx."
+    "Now the we query the annotated callset with a set of queries for annotations from `near_gens_Annotation` to `near_gens_Overlapped`.  This creates detailed `results` as well as a `summary` showing the number of calls in each category for each Dx.\n",
+    "\n",
+    "### Note on enhancers\n",
+    "\n",
+    "`Enh` stands for enhancer and `EnhG` for genic enhancer.  For the difference see [this discussion](https://www.biostars.org/p/211736/) summarized below:\n",
+    "\n",
+    "> It's important to note that these are probabilistic categories based solely on the histone marks -- there are probably some promoters/TSS mixed in with the regions annotated as genic enhancers. "
    ]
   },
   {
@@ -6326,13 +6332,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 52555,\n",
-      "  \"iopub_port\": 34777,\n",
-      "  \"stdin_port\": 51681,\n",
-      "  \"control_port\": 39513,\n",
-      "  \"hb_port\": 40965,\n",
+      "  \"shell_port\": 40505,\n",
+      "  \"iopub_port\": 60575,\n",
+      "  \"stdin_port\": 60157,\n",
+      "  \"control_port\": 43391,\n",
+      "  \"hb_port\": 57005,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"e7df051d-1c9ce47f21bcf2df50b1ce6e\",\n",
+      "  \"key\": \"4cc2c45a-07007dfd5f5d3c36dbd349a3\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -6341,7 +6347,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-640bc538-d35b-497b-912e-866899878223.json\n",
+      "    $> jupyter <app> --existing kernel-b440b0fe-2a7e-4e28-a8fa-4f562c3a91e0.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
