--- a/presentations/2021-04-21-cdrb-wip/2021-04-21-cdrb-wip.tex
+++ b/presentations/2021-04-21-cdrb-wip/2021-04-21-cdrb-wip.tex
@@ -387,9 +387,9 @@ GWAS genesets & ADHD GWAS & 1 + AF + DP & 6 \\
 \includegraphics[width=1.1\textwidth]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/enrichment-5-plots_scz.pdf}
 \end{frame}
 
-\begin{frame}{Enrichment of GWAS loci vs.~GWAS genes}
+\begin{frame}{Enrichment of GWAS genes vs.~GWAS loci}
 \begin{center}
-\includegraphics[height=0.8\textheight]{../../notebook/2020-07-28-CLOZUK/named-figure/calls-in-scz-gwas-loci-coding.pdf}
+\includegraphics[scale=0.6]{../../notebook/2020-07-28-CLOZUK/named-figure/rel-callrate-sczgwas2_scz.pdf}
 \end{center}
 \end{frame}
 
