--- a/presentations/bsm-ms/bsm-ms.tex
+++ b/presentations/bsm-ms/bsm-ms.tex
@@ -102,8 +102,7 @@ the exception of an outlier schizophrenic sample reaching \(\approx 200\)
 (Fig~\ref{fig:genomewide-calls}A).
 
 \begin{figure}
-A\includegraphics[scale=0.6]{../../notebook/2020-06-10-annotate-explore-variants/named-figure/numcalls-Dx.pdf}
-B\includegraphics[scale=0.6]{../../notebook/2020-12-09-walsh-data/named-figure/ncalls-depth-chess-walsh.pdf}
+\includegraphics[scale=0.6]{../../notebook/2020-12-09-walsh-data/named-figure/genome-wide-callrate.pdf}
 \caption{Genome wide somatic SNV call rate for Control and Schizophrenic samples.  TODO:
 	add Harvard control samples, remove ASD}
 \label{fig:genomewide-calls}
